<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/admin_dashboard" />

        <item
            android:id="@+id/nav_admin_users"
            android:icon="@drawable/ic_users"
            android:title="@string/admin_users" />

        <item
            android:id="@+id/nav_admin_books"
            android:icon="@drawable/ic_book"
            android:title="@string/admin_books" />

        <item
            android:id="@+id/nav_admin_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/admin_categories" />

        <item
            android:id="@+id/nav_admin_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/admin_orders" />

        <item
            android:id="@+id/nav_admin_reports"
            android:icon="@drawable/ic_report"
            android:title="@string/admin_reports" />
    </group>

    <group android:id="@+id/group_admin_account" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_admin_profile"
            android:icon="@drawable/ic_users"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_admin_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>