<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_staff_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/staff_dashboard" />

        <item
            android:id="@+id/nav_staff_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/staff_orders" />

        <item
            android:id="@+id/nav_staff_inventory"
            android:icon="@drawable/ic_inventory"
            android:title="@string/staff_inventory" />
    </group>

    <group android:id="@+id/group_staff_account" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_staff_profile"
            android:icon="@drawable/ic_users"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_staff_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>