<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/staff_navigation"
    app:startDestination="@id/nav_staff_dashboard">

    <fragment
        android:id="@+id/nav_staff_dashboard"
        android:name="com.example.sbooks.fragments.staff.StaffDashboardFragment"
        android:label="@string/staff_dashboard"
        tools:layout="@layout/fragment_staff_dashboard" />

    <fragment
        android:id="@+id/nav_staff_orders"
        android:name="com.example.sbooks.fragments.staff.StaffOrderFragment"
        android:label="@string/staff_orders"
        tools:layout="@layout/fragment_staff_order" />

    <fragment
        android:id="@+id/nav_staff_inventory"
        android:name="com.example.sbooks.fragments.staff.StaffInventoryFragment"
        android:label="@string/staff_inventory"
        tools:layout="@layout/fragment_staff_inventory" />

</navigation>